# transfocate

./: .coveragerc  .doctr-files  .flake8  .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  calculator.html  dev-requirements.txt  docs-requirements.txt  genindex.html  github_deploy_key_pcdshub_transfocate.enc  index.html  introduction.html  lens.html  objects.inv  py-modindex.html  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py  transfocator.html  versions.json
.github/workflows/: standard.yml
_modules/: index.html
_modules/ophyd/: device.html
_sources/: index.rst.txt  transfocator.rst.txt
_static/: documentation_options.js
conda-recipe/: meta.yaml
docs/: Makefile
docs/source/: conf.py  (+5 more)
master/: .buildinfo  .doctr-files  calculator.html  genindex.html  index.html  lens.html  objects.inv  py-modindex.html  search.html  searchindex.js  transfocator.html
tests/: conftest.py  server.py  test_calculator.py  test_lens.py  test_transfocate.py
transfocate/: __init__.py  _version.py  automated_checkout.py  calculator.py  checkout.py  config.py  lens.py  offline_calculator.py  test_calc.py  transfocator.py  utils.py
v0.5.7/: .buildinfo  calculator.html  genindex.html  index.html  lens.html  objects.inv  py-modindex.html  search.html  searchindex.js  transfocator.html
v0.5.9/: .buildinfo  calculator.html  genindex.html  index.html  lens.html  objects.inv  py-modindex.html  search.html  transfocator.html
(+30 files in other folders)
